- do not ask sources on startup
- edit_urpm_sources:
  o move "add media" menu entries from the "Options" menu into the
    "File" menu (#44601)
- gurpmi.addmedia:
  o handle --urpmi-root
- rpmdrake:
  o fix too big "media to update" window (#44518)

Version 5 - 1 October 2008, Thierry Vignaud

- rpmdrake:
  o use radio buttons in order to show current search mode 
- edit_urpm_sources:
  o add an "Add media" menu item in order to still able to manually
    choose mirror
  o default to use mirrorlist (#39898)
  o enable to edit mirrorlist media

Version 4.21 - 30 September 2008, Thierry Vignaud

- fix modality/transient hints
  (regression introduced in drakxtools-11.10.2 on 18 August 2008 while
  fixing focus issues)
- workaround crashing when tree selection wasn't realized yet (#41010)
- rpmdrake:
  o only warn once per session when media XML metadata are newer than
    synthesis (#42737)
    (meaning package list & metadata are not syncrhonised and that
    media need updates)

Version 4.20.3 - 24 September 2008, Olivier Blin

- gurpmi.addmedia:
  o fix crash in attempt to set dialog hint

Version 4.20.2 - 23 September 2008, Thierry Vignaud

- gurpmi.addmedia:
  o set dialog hint if drakx-matchbox-window-manager is used
    (for installer)

Version 4.20.1 - 20 September 2008, Thierry Vignaud

- rpmdrake:
  o update GUI package list

Version 4.20 - 20 September 2008, Thierry Vignaud

- basic managment of orphan packages (#43723):
  o display them
  o handle --auto_orphans option
- rpmdrake:
  o remove short lived wait message when changing selected view to
    some 'update' view (security/bugfix/...) since it's too fast
  o remove short lived wait message when reloading the packages list
    (#43955)

Version 4.19 - 17 September 2008, Thierry Vignaud

- do display conflicting packages instead of silently removing them
  (needs urpmi 6.11) (#43501)
- do not display any (truncated) banner when embedded while updating
  media (like non-embedded case) (#43815)