@@ -1,4 +1,5 @@
 - do not ask sources on startup
+- open help & bug report as user instead of as root (#44497)
 - edit_urpm_sources:
   o move "add media" menu entries from the "Options" menu into the
     "File" menu (#44601)
